example(使用flex，bison，生成抽象语法树)/exp.output
Terminals unused in grammar

   LP
   RP
   ASSIGNOP


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: '\n'
    4     | exp '\n'
    5     | error '\n'

    6 exp: INT
    7    | ID
    8    | exp PLUS exp
    9    | exp MINUS exp
   10    | exp STAR exp
   11    | exp DIV exp
   12    | '(' exp ')'
   13    | MINUS exp


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4 5
'(' (40) 12
')' (41) 12
error (256) 5
INT (258) 6
ID (259) 7
LP (260)
RP (261)
PLUS (262) 8
MINUS (263) 9 13
STAR (264) 10
DIV (265) 11
ASSIGNOP (266)
UMINUS (267)


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
input (17)
    on left: 1 2, on right: 0 2
line (18)
    on left: 3 4 5, on right: 2
exp (19)
    on left: 6 7 8 9 10 11 12 13, on right: 4 8 9 10 11 12 13


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line

    $end   shift, and go to state 2
    error  shift, and go to state 3
    INT    shift, and go to state 4
    ID     shift, and go to state 5
    MINUS  shift, and go to state 6
    '\n'   shift, and go to state 7
    '('    shift, and go to state 8

    line  go to state 9
    exp   go to state 10


State 2

    0 $accept: input $end .

    $default  accept


State 3

    5 line: error . '\n'

    '\n'  shift, and go to state 11


State 4

    6 exp: INT .

    $default  reduce using rule 6 (exp)


State 5

    7 exp: ID .

    $default  reduce using rule 7 (exp)


State 6

   13 exp: MINUS . exp

    INT    shift, and go to state 4
    ID     shift, and go to state 5
    MINUS  shift, and go to state 6
    '('    shift, and go to state 8

    exp  go to state 12


State 7

    3 line: '\n' .

    $default  reduce using rule 3 (line)


State 8

   12 exp: '(' . exp ')'

    INT    shift, and go to state 4
    ID     shift, and go to state 5
    MINUS  shift, and go to state 6
    '('    shift, and go to state 8

    exp  go to state 13


State 9

    2 input: input line .

    $default  reduce using rule 2 (input)


State 10

    4 line: exp . '\n'
    8 exp: exp . PLUS exp
    9    | exp . MINUS exp
   10    | exp . STAR exp
   11    | exp . DIV exp

    PLUS   shift, and go to state 14
    MINUS  shift, and go to state 15
    STAR   shift, and go to state 16
    DIV    shift, and go to state 17
    '\n'   shift, and go to state 18


State 11

    5 line: error '\n' .

    $default  reduce using rule 5 (line)


State 12

    8 exp: exp . PLUS exp
    9    | exp . MINUS exp
   10    | exp . STAR exp
   11    | exp . DIV exp
   13    | MINUS exp .

    $default  reduce using rule 13 (exp)


State 13

    8 exp: exp . PLUS exp
    9    | exp . MINUS exp
   10    | exp . STAR exp
   11    | exp . DIV exp
   12    | '(' exp . ')'

    PLUS   shift, and go to state 14
    MINUS  shift, and go to state 15
    STAR   shift, and go to state 16
    DIV    shift, and go to state 17
    ')'    shift, and go to state 19


State 14

    8 exp: exp PLUS . exp

    INT    shift, and go to state 4
    ID     shift, and go to state 5
    MINUS  shift, and go to state 6
    '('    shift, and go to state 8

    exp  go to state 20


State 15

    9 exp: exp MINUS . exp

    INT    shift, and go to state 4
    ID     shift, and go to state 5
    MINUS  shift, and go to state 6
    '('    shift, and go to state 8

    exp  go to state 21


State 16

   10 exp: exp STAR . exp

    INT    shift, and go to state 4
    ID     shift, and go to state 5
    MINUS  shift, and go to state 6
    '('    shift, and go to state 8

    exp  go to state 22


State 17

   11 exp: exp DIV . exp

    INT    shift, and go to state 4
    ID     shift, and go to state 5
    MINUS  shift, and go to state 6
    '('    shift, and go to state 8

    exp  go to state 23


State 18

    4 line: exp '\n' .

    $default  reduce using rule 4 (line)


State 19

   12 exp: '(' exp ')' .

    $default  reduce using rule 12 (exp)


State 20

    8 exp: exp . PLUS exp
    8    | exp PLUS exp .
    9    | exp . MINUS exp
   10    | exp . STAR exp
   11    | exp . DIV exp

    STAR  shift, and go to state 16
    DIV   shift, and go to state 17

    $default  reduce using rule 8 (exp)


State 21

    8 exp: exp . PLUS exp
    9    | exp . MINUS exp
    9    | exp MINUS exp .
   10    | exp . STAR exp
   11    | exp . DIV exp

    STAR  shift, and go to state 16
    DIV   shift, and go to state 17

    $default  reduce using rule 9 (exp)


State 22

    8 exp: exp . PLUS exp
    9    | exp . MINUS exp
   10    | exp . STAR exp
   10    | exp STAR exp .
   11    | exp . DIV exp

    $default  reduce using rule 10 (exp)


State 23

    8 exp: exp . PLUS exp
    9    | exp . MINUS exp
   10    | exp . STAR exp
   11    | exp . DIV exp
   11    | exp DIV exp .

    $default  reduce using rule 11 (exp)
